# AI-Chat-Character-Data-Collection-Pipeline

./: README.md  crawler.py  docker-compose.yml  dockerfile.airflow  dockerfile.crawler  pyproject.toml  requirements.txt
